--- a/Form/style.css
+++ b/Form/style.css
@@ -12,37 +12,41 @@ body{
     width: 100svw;
     height: 100svh;
     background-color:#1e1e1e;
-    background: radial-gradient(white, white , lightblue );
+    /* background: radial-gradient(white, white , lightblue ); */
     overflow-x: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
     /* overflow-y: hidden; */
 }
 
 :root{
-    --my-border : 2px solid lightblue;
-    --my-blue : rgb(0, 157, 255);
+    --my-border: 2px solid rgb(240, 182, 10);
+    --my-blue : rgb(255, 255, 255);
 }
 
 .form{
-    background-color: red;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     margin: auto;
     margin-top: 3em;
-    width: 50%;
+    width: 40%;
     min-height: 90%;
-    padding: 20px;
-    background-color: transparent;
+    padding: 30px;
+    padding-left: 5em;
     border: var(--my-border);
     border-radius: 30px;
+    
+
 }
 
 .form input{
-    border: var(--my-border);
-    padding: 11px;
-    border-radius: 10px;
+    border-bottom: var(--my-border);
+    padding: 15px;
     background-color: transparent;
     font-size: 15px;
+    width: 80%;
+    color: rgb(144, 140, 140);
 }
 
 .form div{
@@ -63,7 +67,20 @@ body{
     background-color: transparent;
     transition: 1s;
     &:hover{
-        background-color: var(--my-blue);
+        background-color: rgba(255, 217, 0, 0.279);
         color: white;
     }
+}
+
+.form label{
+    color: rgba(255, 174, 0, 0.845);
+}
+
+ul li{
+    color: rgb(226, 84, 84);
+    font-size: 15px;
+}
+
+#submit a{
+    color: white;
 }
